--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,18 @@
             "VrgDev\\MNBClient\\": "src/"
         }
     },
+    "require": {
+        "vrgdev/xml-parser": "dev-main"
+    },
     "require-dev": {
         "phpunit/phpunit": "^11.4"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/vrgdev/xml-parser"
+        }
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
