--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "vrgdev/xml-parser": "dev-main"
+        "vrgdev/xml-parser": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.4"
@@ -17,7 +17,5 @@
             "type": "vcs",
             "url": "https://github.com/vrgdev/xml-parser"
         }
-    ],
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    ]
 }
