--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
             "type": "vcs",
             "url": "https://github.com/vrgdev/xml-parser"
         }
-    ]
+    ],
+    "require": {
+        "vrgdev/xml-parser": "^1.0"
+    }
 }
